--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types"
   },
-  "devDependencies": {
-    "prettier": "^3.5.3",
-    "turbo": "^2.5.3",
-    "typescript": "5.8.2"
-  },
+  "devDependencies": {    
+    "@saas/eslint-config": "workspace:*",
+    "@saas/typescript-config": "workspace:*",
+    "prettier": "^3.2.5",
+    "turbo": "^2.5.3"
+  },  
   "engines": {
     "node": ">=18"
   },
   "packageManager": "npm@11.3.0",
   "workspaces": [
     "apps/*",
+    "config/*",
     "packages/*"
+    
   ]
 }
