--- a/package.json
+++ b/package.json
@@ -5,23 +5,18 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types"
   },
   "devDependencies": {    
-    "@saas/eslint-config": "workspace:*",
-    "@saas/typescript-config": "workspace:*",
-    "prettier": "^3.2.5",
     "turbo": "^2.5.3"
   },  
   "engines": {
     "node": ">=18"
   },
   "packageManager": "npm@11.3.0",
-  "workspaces": [
+   "workspaces": [
     "apps/*",
-    "config/*",
-    "packages/*"
-    
+    "packages/*",
+    "config/*"
   ]
 }
