--- a/config/eslint-config/package.json
+++ b/config/eslint-config/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "@saas/prettier": "*"
+    "@saas/prettier": "file: ../prettier"
   },
   "prettier": "@saas/prettier",
   "eslintConfig": {
