--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -5,12 +5,17 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "devDependencies": {
-    "@saas/prettier": "file:../../config/prettier",
     "@saas/eslint-config": "file:../../config/eslint",
+    "@saas/prettier": "file:../../config/prettier",
     "@saas/tsconfig": "file:../../config/tsconfig"
   },
   "eslintConfig": {
-    "extends": ["@saas/eslint-config/base"]
+    "extends": [
+      "@saas/eslint-config/base"
+    ]
   },
-  "prettier": "@saas/prettier"
+  "prettier": "@saas/prettier",
+  "dependencies": {
+    "@casl/ability": "^6.7.3"
+  }
 }
